--- a/thankyou.html
+++ b/thankyou.html
@@ -8,7 +8,7 @@
     <meta name="author" content="Suvichak Jaroenpanit" />
     <title>Internship Submit Application Website</title>
 
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
     
 
 </head>
