--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
 
+
+
+
+
 <html lang="en">
 
 <head>
@@ -30,7 +34,7 @@
 
                 <Div class="input-email">
                     <i class="fa fa-envelope email"></i>
-                    <input  type="email" placeholder=" your@examplegmail.com" class="emailtxt" name="email" id="email" required>
+                   <label for="email"> <input  type="email" placeholder=" your@examplegmail.com" class="emailtxt" name="email" id="email" required> </label>
                 </Div>
 
                 <Div class="input-phone">
