--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
                 <Div class="input-submit">
 
-                    <button type="button">
+                    <button type="submit" value="Send">
                         <a href="thankyou.html">Submit</a>
                     </button>
 
