--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 
 
 
+
+
 <html lang="en">
 
 <head>
@@ -19,10 +21,12 @@
 
 
 <body class="bg">
+
+    
     <div class="container">
         <h2> Internship Registration Form</h2>
         <div>
-            <Form action="mail.php" method="POST" >
+            <Form action="mail.php" method="post" >
                 <div class="input-user">
                     <i class="fa fa-user user"></i>
                     <input type="text" placeholder="First Name" class="name" name="firstname" id="first_name" required>
@@ -34,7 +38,7 @@
 
                 <Div class="input-email">
                     <i class="fa fa-envelope email"></i>
-                   <label for="email"> <input  type="email" placeholder=" your@examplegmail.com" class="emailtxt" name="email" id="email" required> </label>
+                   <label for="email"> <input  type="email" placeholder="your@examplegmail.com" class="emailtxt" name="email" id="email" required> </label>
                 </Div>
 
                 <Div class="input-phone">
