--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
                 <Div class="input-submit">
 
-                    <button type="submit" value="Send">
+                    <button type="submit" value="Send" name="send">
                         <a href="thankyou.html">Submit</a>
                     </button>
 
