--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
 
                 <Div class="input-submit">
 
-                    <button type="submit" value="Send" name="send">
-                        <a href="thankyou.html">Submit</a>
+                    <button type="submit" name="send">
+                        Submit
                     </button>
 
                 </Div>
