--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div class="container">
         <h2> Internship Registration Form</h2>
         <div>
-            <Form action="mail.php" method="post" >
+            <Form action="mail2.php" method="post" >
                 <div class="input-user">
                     <i class="fa fa-user user"></i>
                     <input type="text" placeholder="First Name" class="name" name="firstname" id="first_name" required>
@@ -56,9 +56,8 @@
 
                 <Div class="input-submit">
 
-                    <button type="submit" name="send">
-                        Submit
-                    </button>
+                   <a href="thankyou.html"> <input type="submit" value="Submit" name="send"> </a>
+                      
 
                 </Div>
             </Form>
